<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    tools:context=".AddTaskActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/image"
        android:src="@drawable/cat"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/title" />

        <EditText
            android:id="@+id/title_input"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/title_placeholder"
            android:inputType="text"
            android:lines="1"
            android:paddingHorizontal="10dp"
            tools:ignore="Autofill"
            android:maxWidth="320dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/description" />

        <EditText
            android:id="@+id/description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/description_placeholder"
            android:inputType="textMultiLine"
            android:lines="5"
            android:padding="10dp"
            tools:ignore="Autofill"
            android:maxWidth="320dp"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_task_button"
        android:layout_width="match_parent"
        android:maxWidth="320dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:background="@drawable/button_background"
        android:text="@string/add_task"
        android:textColor="@color/black" />

</LinearLayout>