<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="360dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/popup_dialog_background">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:contentDescription="@string/image"
        android:src="@drawable/octopus"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/clear_all"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:layout_marginTop="14dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/no_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="?attr/colorOnPrimary"
            android:background="@drawable/button_secondary_background"
            android:text="@string/no"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/yes_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="12dp"
            android:textColor="?attr/colorOnPrimary"
            android:background="@drawable/button_background"
            android:text="@string/yes"/>

    </LinearLayout>

</LinearLayout>