<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="360dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/popup_dialog_background">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:contentDescription="@string/image"
        android:src="@drawable/puppy" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/task_added"
        android:textStyle="bold"
        android:textSize="24sp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/done_button"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="14dp"
        android:textColor="?attr/colorOnPrimary"
        android:background="@drawable/button_background"
        android:text="@string/done"/>


</LinearLayout>